This file contains details of the changes in each new version of PRISM.

New since last release:

* Export labels from GUI

-----------------------------------------------------------------------------
Version 4.1 (first released 20/12/2012)
-----------------------------------------------------------------------------

* Multi-objective model checking for MDPs

* New explicit-state (pure Java) model checking engine
  - coverage of much, but not all, of PRISM's model checking functionality
  - new methods for MDPs: policy iteration (-politer -modpoliter) and Gauss-Seidel (-gs)
  - accompanying significant changes to underlying PRISM (Java) API

* GUI improvements
  - easy plotting of graphs for simulation paths in the GUI
  - command-line GUI call (xprism)  takes both model and properties files as arguments
  - easier zoom-out (double click) for graphs in GUI

* CTL model checking (most operators)
  - and counterexample/witness generation for A[G ...] or E[F ...]
  
* Changes to deadlock handling:
  - new option for "fix deadlocks" (defaults to *true*) (and new switch -nofixdl) 
  - consistent deadlock handling everywhere, incl. GUI and experiments

* Model checking improvements
  - incremental computation of ranges of transient probabilities
    when called from command-line (e.g. -tr 0.1:0.01:0.2) 
  - new "printall" filter (shows zero results too, unlike "print")
  - -importinit option works for steady-state as well as transient probabilities
  - additional output in log of progress for numerical solution techniques

* Improvements to simulation path generation using -simpath switch
  - more efficient path generation (on-the-fly) where possible
  - new 'snapshot' option to only show states at certain time-points
  - added 'probs' option to display transition probabilities/rates
  - rewards are not displayed by default; use 'rewards' option to show
  
* Changes to usage of PRISM settings file